@@ -343,11 +343,12 @@
 	"weapon.dagger" : 24,                      			//( 15,  35) | AP: 0.20 | AE: 0.60
 	"weapon.rondel_dagger" : 75,               			//( 20,  40) | AP: 0.20 | AE: 0.70
 	"shield.legend_parrying_dagger" : 65,
-	"shield.legend_named_parrying_dagger" : 65,
+	"shield.legend_named_parrying_dagger" : 286,
+
 	"weapon.goblin_notched_blade" : 55,        			//( 20,  30) | AP: 0.20 | AE: 0.60
-	"weapon.named_dagger" : 113,               			//( 20,  40) | AP: 0.20 | AE: 0.70
+	"weapon.named_dagger" : 350,               			//( 20
 	"weapon.qatal_dagger" : 75,                			//( 30,  45) | AP: 0.20 | AE: 0.70
-	"weapon.named_qatal_dagger" : 113,         			//( 30,  45) | AP: 0.20 | AE: 0.70
+	"weapon.named_qatal_dagger" : 350,         			//( 30
 	"weapon.legend_katar" : 120,               			//( 30,  45) | AP: 0.30 | AE: 1.25
 
 	//SWORD
@@ -360,7 +361,7 @@
 
 	"weapon.shortsword" : 90,                  			//( 30,  40) | AP: 0.20 | AE: 0.75
 	"weapon.goblin_falchion" : 90,             			//( 35,  45) | AP: 0.20 | AE: 0.70
-	"weapon.named_goblin_falchion" : 135,      			//( 35,  45) | AP: 0.20 | AE: 0.70
+	"weapon.named_goblin_falchion" : 380,      			//( 35
 
 	"weapon.falchion" : 120,                    		//( 35,  45) | AP: 0.20 | AE: 0.70
 	"weapon.saif" : 110,                        		//( 35,  40) | AP: 0.20 | AE: 0.65
@@ -370,33 +371,33 @@
 	"weapon.arming_sword" : 150,               			//( 40,  45) | AP: 0.20 | AE: 0.80
 	"weapon.scimitar" : 150,                   			//( 40,  45) | AP: 0.20 | AE: 0.70
 	"weapon.legend_gladius" : 150,              		//( 43,  48) | AP: 0.20 | AE: 0.80
-	"weapon.legend_named_gladius" : 225,       			//( 43,  48) | AP: 0.20 | AE: 0.80
+	"weapon.legend_named_gladius" : 500,       			//( 43
 
 	"weapon.noble_sword" : 188,                			//( 45,  50) | AP: 0.20 | AE: 0.85
-	"weapon.named_sword" : 282,                			//( 45,  50) | AP: 0.20 | AE: 0.85
+	"weapon.named_sword" : 576,                			//( 45
 	"weapon.shamshir" : 188,                   			//( 45,  50) | AP: 0.20 | AE: 0.75
-	"weapon.named_shamshir" : 282,             			//( 45,  50) | AP: 0.20 | AE: 0.75
+	"weapon.named_shamshir" : 576,             			//( 45
 	"weapon.fencing_sword" : 146,              			//( 35,  50) | AP: 0.20 | AE: 0.75
-	"weapon.named_fencing_sword" : 219,        			//( 35,  50) | AP: 0.20 | AE: 0.75
+	"weapon.named_fencing_sword" : 492,        			//( 35
 
 	"weapon.lightbringer_sword" : 18000,        		//( 50,  55) | AP: 0.20 | AE: 0.90
 
 	//2H
 	"weapon.rhomphaia" : 146,                  			//( 45,  65) | AP: 0.20 | AE: 1.05
 	"weapon.warbrand" : 166,                   			//( 50,  75) | AP: 0.20 | AE: 0.75
-	"weapon.named_warbrand" : 249,             			//( 50,  75) | AP: 0.20 | AE: 0.75
+	"weapon.named_warbrand" : 532,             			//( 50
 
 	"weapon.legend_longsword" : 166,           			//( 50,  75) | AP: 0.25 | AE: 0.80
-	"weapon.legend_named_longsword" : 249,     			//( 50,  75) | AP: 0.25 | AE: 0.80
+	"weapon.legend_named_longsword" : 532,     			//( 50
 	"weapon.legend_crusader_sword" : 208,      			//( 60,  75) | AP: 0.25 | AE: 0.80
 
 	"weapon.legend_estoc" : 186,               			//( 45,  60) | AP: 0.20 | AE: 0.60
-	"weapon.legend_named_estoc" : 279,         			//( 45,  60) | AP: 0.20 | AE: 0.60
+	"weapon.legend_named_estoc" : 572,         			//( 45
 
 	"weapon.longsword" : 194,                  			//( 65,  85) | AP: 0.25 | AE: 1.00
-	"weapon.named_longsword" : 291,            			//( 65,  85) | AP: 0.25 | AE: 1.00
+	"weapon.named_longsword" : 588,            			//( 65
 	"weapon.greatsword" : 266,                 			//( 85, 100) | AP: 0.25 | AE: 1.00
-	"weapon.named_greatsword" : 399,           			//( 85, 100) | AP: 0.25 | AE: 1.00
+	"weapon.named_greatsword" : 732,           			//( 85
 
 	//AXE
 	"weapon.legend_meat_hacker" : 0,          			//( 30,  55) | AP: 0.30 | AE: 1.20
@@ -407,28 +408,28 @@
 	"weapon.crude_axe" : 0,                   			//( 30,  40) | AP: 0.30 | AE: 1.20
 	"weapon.hand_axe" : 72,                   			//( 30,  45) | AP: 0.30 | AE: 1.20
 	"weapon.fighting_axe" : 150,               			//( 35,  55) | AP: 0.30 | AE: 1.30
-	"weapon.named_axe" : 225,                  			//( 35,  55) | AP: 0.30 | AE: 1.30
-	"weapon.named_orc_axe" : 225,              			//( 35,  65) | AP: 0.30 | AE: 1.30
+	"weapon.named_axe" : 500,                  			//( 35
+	"weapon.named_orc_axe" : 500,              			//( 35
 	//2H
 	"weapon.legend_hoe" : 3,                   			//( 15,  20) | AP: 0.30 | AE: 0.60
 	"weapon.woodcutters_axe" : 12,             			//( 35,  70) | AP: 0.40 | AE: 1.25
 
 	"weapon.legend_infantry_axe" : 112,        			//( 50,  70) | AP: 0.35 | AE: 1.25
-	"weapon.legend_named_infantry_axe" : 168,  			//( 50,  70) | AP: 0.35 | AE: 1.25
+	"weapon.legend_named_infantry_axe" : 424,  			//( 50
 
 	"weapon.longaxe" : 112,                    			//( 70,  95) | AP: 0.30 | AE: 1.10
-	"weapon.named_longaxe" : 168,              			//( 70,  95) | AP: 0.30 | AE: 1.10
+	"weapon.named_longaxe" : 424,              			//( 70
 	"weapon.legend_fan_axe" : 151,             			//( 60,  95) | AP: 0.40 | AE: 1.10
 
 	"weapon.bardiche" : 151,                   			//( 75,  95) | AP: 0.40 | AE: 1.30
-	"weapon.named_bardiche" : 227,             			//( 75,  95) | AP: 0.40 | AE: 1.30
+	"weapon.named_bardiche" : 502,             			//( 75
 
 	"weapon.heavy_rusty_axe" : 0,            			//( 75,  90) | AP: 0.40 | AE: 1.50
-	"weapon.named_heavy_rusty_axe" : 210,      			//( 75,  90) | AP: 0.40 | AE: 1.50
+	"weapon.named_heavy_rusty_axe" : 480,      			//( 75
 	"weapon.greataxe" : 203,                   			//( 80, 100) | AP: 0.40 | AE: 1.50
-	"weapon.named_greataxe" : 304,             			//( 80, 100) | AP: 0.40 | AE: 1.50
+	"weapon.named_greataxe" : 605,             			//( 80
 	"weapon.orc_axe_2h" : 274,                 			//( 90, 120) | AP: 0.40 | AE: 1.60
-	"weapon.named_orc_axe_2h" : 411,           			//( 90, 120) | AP: 0.40 | AE: 1.60
+	"weapon.named_orc_axe_2h" : 748,           			//( 90
 
 	//CLEAVER
 	"weapon.orc_cleaver" : 0,                			//( 40,  70) | AP: 0.25 | AE: 1.10
@@ -445,33 +446,33 @@
 
 	//1H
 	"weapon.butchers_cleaver" : 10,            			//( 20,  35) | AP: 0.25 | AE: 0.75
-	"weapon.legend_named_butchers_cleaver" : 110,		//( 35,  50) | AP: 0.25 | AE: 0.75
+	"weapon.legend_named_butchers_cleaver" : 346,		//( 35
 	"weapon.falx" : 52,                        			//( 25,  35) | AP: 0.25 | AE: 0.80
 	"weapon.blunt_cleaver" : 0,               			//( 30,  40) | AP: 0.25 | AE: 0.80
 	"weapon.scramasax" : 64,                   			//( 30,  45) | AP: 0.25 | AE: 0.80
 
 	"weapon.military_cleaver" : 150,           			//( 40,  60) | AP: 0.25 | AE: 0.90
-	"weapon.named_cleaver" : 225,              			//( 40,  60) | AP: 0.25 | AE: 0.90
-	"weapon.named_orc_cleaver" : 225,          			//( 40,  70) | AP: 0.25 | AE: 1.10
+	"weapon.named_cleaver" : 500,              			//( 40
+	"weapon.named_orc_cleaver" : 500,          			//( 40
 	"weapon.khopesh" : 136,                    			//( 35,  55) | AP: 0.25 | AE: 1.20
-	"weapon.named_khopesh" : 204,              			//( 35,  55) | AP: 0.25 | AE: 1.20
+	"weapon.named_khopesh" : 472,              			//( 35
 	"weapon.legend_khopesh" : 136,             			//( 40,  55) | AP: 0.25 | AE: 1.10
 
 	//2H
 	"weapon.two_handed_saif" : 136,            			//( 50,  70) | AP: 0.25 | AE: 0.90
 	"weapon.two_handed_scimitar" : 151,        			//( 65,  85) | AP: 0.25 | AE: 1.10
-	"weapon.named_two_handed_scimitar" : 227,  			//( 65,  85) | AP: 0.25 | AE: 1.10
+	"weapon.named_two_handed_scimitar" : 502,  			//( 65
 
 	"weapon.legend_voulge" : 136,              			//( 60,  85) | AP: 0.25 | AE: 0.80
 	"weapon.legend_military_voulge" : 166,     			//( 80, 100) | AP: 0.25 | AE: 0.90
-	"weapon.legend_named_voulge" : 249,        			//( 80, 100) | AP: 0.25 | AE: 0.90
+	"weapon.legend_named_voulge" : 532,        			//( 80
 
 	"weapon.rusty_warblade" : 0,             			//( 60,  80) | AP: 0.25 | AE: 1.10
-	"weapon.named_rusty_warblade" : 204,       			//( 60,  80) | AP: 0.25 | AE: 1.10
+	"weapon.named_rusty_warblade" : 472,       			//( 60
 	"weapon.crypt_cleaver" : 166,              			//( 60,  80) | AP: 0.25 | AE: 1.20
-	"weapon.named_crypt_cleaver" : 249,        			//( 60,  80) | AP: 0.25 | AE: 1.20
+	"weapon.named_crypt_cleaver" : 532,        			//( 60
 	"weapon.legend_great_khopesh" : 189,       			//( 75,  95) | AP: 0.25 | AE: 1.20
-	"weapon.named_legend_great_khopesh" : 284, 			//( 75,  95) | AP: 0.25 | AE: 1.20
+	"weapon.named_legend_great_khopesh" : 578, 			//( 75
 
 	//SPEAR
 	"weapon.legend_wooden_spear" : 0,          			//( 15,  25) | AP: 0.25 | AE: 0.45
@@ -483,18 +484,18 @@
 	"weapon.boar_spear" : 39,                  			//( 30,  35) | AP: 0.25 | AE: 0.95
 	"weapon.firelance" : 86,                   			//( 30,  35) | AP: 0.25 | AE: 1.10
 	"weapon.fighting_spear" : 86,             			//( 35,  40) | AP: 0.25 | AE: 1.00
-	"weapon.named_spear" : 225,                			//( 35,  40) | AP: 0.25 | AE: 1.00
+	"weapon.named_spear" : 500,                			//( 35
 	"weapon.goblin_spear" : 26,                			//( 30,  40) | AP: 0.25 | AE: 0.70
-	"weapon.named_goblin_spear" : 130,         			//( 30,  40) | AP: 0.25 | AE: 0.70
+	"weapon.named_goblin_spear" : 373,         			//( 30
 
 	"weapon.legend_glaive" : 120,              			//( 40,  45) | AP: 0.25 | AE: 0.95
 	"weapon.legend_battle_glaive" : 150,       			//( 45,  50) | AP: 0.25 | AE: 1.00
-	"weapon.legend_named_glaive" : 225,        			//( 45,  50) | AP: 0.25 | AE: 1.00
+	"weapon.legend_named_glaive" : 500,        			//( 45
 
 	//2H
 	"weapon.goedendag" : 86,                   			//( 45,  75) | AP: 0.25 | AE: 1.10
 	"weapon.legend_military_goedendag" : 129,  			//( 70, 100) | AP: 0.40 | AE: 1.25
-	"weapon.legend_named_military_goedendag" : 194,		//( 80, 110) | AP: 0.40 | AE: 1.25
+	"weapon.legend_named_military_goedendag" : 458,		//( 80
 
 	//POLEARM
 	"weapon.legend_wooden_pitchfork" : 0,      			//( 15,  35) | AP: 0.30 | AE: 0.20
@@ -504,26 +505,26 @@
 	"weapon.warfork" : 24,                     			//( 40,  60) | AP: 0.25 | AE: 1.00
 
 	"weapon.goblin_pike" : 130,                 		//( 50,  70) | AP: 0.25 | AE: 0.90
-	"weapon.named_goblin_pike" : 195,          			//( 50,  70) | AP: 0.25 | AE: 0.90
+	"weapon.named_goblin_pike" : 460,          			//( 50
 	"weapon.bladed_pike" : 140,                 		//( 55,  80) | AP: 0.30 | AE: 1.25
-	"weapon.named_bladed_pikee" : 210,         			//( 55,  80) | AP: 0.30 | AE: 1.25
+	"weapon.named_bladed_pikee" : 480,         			//( 55
 	"weapon.pike" : 150,                        		//( 60,  80) | AP: 0.30 | AE: 1.00
-	"weapon.named_pike" : 225,                 			//( 60,  80) | AP: 0.30 | AE: 1.00
+	"weapon.named_pike" : 500,                 			//( 60
 	"weapon.billhook" : 160,                   			//( 55,  85) | AP: 0.30 | AE: 1.40
-	"weapon.named_billhook" : 240,             			//( 55,  85) | AP: 0.30 | AE: 1.40
+	"weapon.named_billhook" : 520,             			//( 55
 	"weapon.swordlance" : 160,                 			//( 60,  80) | AP: 0.30 | AE: 0.90
-	"weapon.named_swordlance" : 240,           			//( 60,  80) | AP: 0.30 | AE: 0.90
+	"weapon.named_swordlance" : 520,           			//( 60
 	"weapon.warscythe" : 160,                   		//( 55,  80) | AP: 0.30 | AE: 1.05
-	"weapon.named_warscythe" : 240,            			//( 55,  80) | AP: 0.30 | AE: 1.05
+	"weapon.named_warscythe" : 520,            			//( 55
 	"weapon.legend_halberd" : 160,             			//( 60,  80) | AP: 0.30 | AE: 1.50
-	"weapon.legend_named_halberd" : 240,       			//( 60,  80) | AP: 0.30 | AE: 1.50
+	"weapon.legend_named_halberd" : 520,       			//( 60
 
 	"weapon.spetum" : 140,                      		//( 55,  75) | AP: 0.25 | AE: 1.00
-	"weapon.named_spetum" : 210,               			//( 55,  75) | AP: 0.25 | AE: 1.00
+	"weapon.named_spetum" : 480,               			//( 55
 	"weapon.legend_swordstaff" : 160,          			//( 50,  70) | AP: 0.25 | AE: 1.00
-	"weapon.legend_named_swordstaff" : 240,    			//( 50,  70) | AP: 0.25 | AE: 1.00
+	"weapon.legend_named_swordstaff" : 520,    			//( 50
 	"weapon.legend_mage_swordstaff" : 420,     			//( 55,  75) | AP: 0.25 | AE: 1.00
-	"weapon.named_royal_lance" : 300,          			//( 55,  70) | AP: 0.35 | AE: 1.00
+	"weapon.named_royal_lance" : 600,          			//( 55
 
 	//FLAIL
 	//1H
@@ -531,23 +532,23 @@
 
 	"weapon.reinforced_wooden_flail" : 9,     			//( 20,  45) | AP: 0.30 | AE: 0.80
 	"weapon.flail" : 48,                      			//( 25,  55) | AP: 0.30 | AE: 1.00
-	"weapon.named_flail" : 72,                			//( 25,  55) | AP: 0.30 | AE: 1.00
+	"weapon.named_flail" : 296,                			//( 25
 	"weapon.three_headed_flail" : 0,         			//( 30,  75) | AP: 0.30 | AE: 1.00
 	"weapon.named_three_headed_flail" : 0,   			//( 30,  75) | AP: 0.30 | AE: 1.00
 
 	//2H
 	"weapon.legend_ranged_wooden_flail" : 18,   		//( 20,  50) | AP: 0.30 | AE: 0.50
 	"weapon.legend_pole_flail" : 140,          			//( 40,  70) | AP: 0.30 | AE: 1.00
-	"weapon.legend_named_flail" : 210,         			//( 50,  80) | AP: 0.30 | AE: 1.00
+	"weapon.legend_named_flail" : 480,         			//( 50
 
 	"weapon.two_handed_wooden_flail" : 48,     			//( 30,  60) | AP: 0.30 | AE: 0.80
 	"weapon.legend_reinforced_flail" : 72,    			//( 35,  70) | AP: 0.30 | AE: 0.95
 	"weapon.two_handed_flail" : 140,           			//( 45,  90) | AP: 0.30 | AE: 1.15
-	"weapon.named_two_handed_flail" : 210,     			//( 45,  90) | AP: 0.30 | AE: 1.15
+	"weapon.named_two_handed_flail" : 480,     			//( 45
 
 	"weapon.legend_chain" : 0,                			//( 15,  45) | AP: 0.20 | AE: 0.30
 	"weapon.orc_flail_2h" : 50,               			//( 50, 100) | AP: 0.30 | AE: 1.25
-	"weapon.named_orc_flail_2h" : 75,         			//( 50, 100) | AP: 0.30 | AE: 1.25
+	"weapon.named_orc_flail_2h" : 300,         			//( 50
 
 
 	//MACE
@@ -566,7 +567,7 @@
 
 	"weapon.winged_mace" : 90,                			//( 35,  55) | AP: 0.40 | AE: 1.10
 	"weapon.heavy_southern_mace" : 90,        			//( 35,  50) | AP: 0.40 | AE: 1.20
-	"weapon.named_mace" : 151,                 			//( 35,  55) | AP: 0.40 | AE: 1.10
+	"weapon.named_mace" : 401,                 			//( 35
 
 	//2H
 	"weapon.legend_shovel" : 8,                			//( 20,  30) | AP: 0.40 | AE: 0.45
@@ -575,12 +576,12 @@
 	"weapon.legend_two_handed_club" : 15,      			//( 35,  60) | AP: 0.50 | AE: 1.00
 	"weapon.two_handed_mace" : 27,            			//( 50,  75) | AP: 0.50 | AE: 1.15
 	"weapon.two_handed_spiked_mace" : 0,      			//( 50,  70) | AP: 0.50 | AE: 1.15
-	"weapon.named_two_handed_spiked_mace" : 151,		//( 50,  70) | AP: 0.50 | AE: 1.15
+	"weapon.named_two_handed_spiked_mace" : 401,		//( 50
 	"weapon.two_handed_flanged_mace" : 130,    			//( 75,  95) | AP: 0.50 | AE: 1.25
-	"weapon.named_two_handed_mace" : 195,      			//( 75,  95) | AP: 0.50 | AE: 1.25
+	"weapon.named_two_handed_mace" : 460,      			//( 75
 
 	"weapon.polemace" : 115,                   			//( 60,  75) | AP: 0.40 | AE: 1.20
-	"weapon.named_polemace" : 195,             			//( 60,  75) | AP: 0.40 | AE: 1.20
+	"weapon.named_polemace" : 460,             			//( 60
 
 
 
@@ -592,25 +593,25 @@
 
 	//1H
 	"weapon.legend_hammer" : 6,                			//( 15,  20) | AP: 0.50 | AE: 1.50
-	"weapon.legend_named_blacksmith_hammer" : 200,		//( 20,  30) | AP: 0.50 | AE: 2.00
+	"weapon.legend_named_blacksmith_hammer" : 466,		//( 20
 	"weapon.pickaxe" : 8,                     			//( 15,  30) | AP: 0.50 | AE: 1.50
 
 	"weapon.military_pick" : 47,               			//( 20,  35) | AP: 0.50 | AE: 2.00
 	"weapon.warhammer" : 78,                  			//( 30,  40) | AP: 0.50 | AE: 2.25
-	"weapon.named_warhammer" : 151,            			//( 30,  40) | AP: 0.50 | AE: 2.25
+	"weapon.named_warhammer" : 401,            			//( 30
 
 
 	//2H
 	"weapon.two_handed_wooden_hammer" : 24,    			//( 40,  70) | AP: 0.50 | AE: 1.50
 
 	"weapon.skull_hammer" : 0,               			//( 45,  65) | AP: 0.50 | AE: 1.80
-	"weapon.named_skullhammer" : 151,          			//( 50,  70) | AP: 0.50 | AE: 1.80
+	"weapon.named_skullhammer" : 401,          			//( 50
 
 	"weapon.polehammer" : 90,                 			//( 50,  75) | AP: 0.50 | AE: 1.85
-	"weapon.named_polehammer" : 151,           			//( 50,  75) | AP: 0.50 | AE: 1.85
+	"weapon.named_polehammer" : 401,           			//( 50
 
 	"weapon.two_handed_hammer" : 120,          			//( 60,  90) | AP: 0.50 | AE: 2.00
-	"weapon.named_two_handed_hammer" : 180,    			//( 60,  90) | AP: 0.50 | AE: 2.00
+	"weapon.named_two_handed_hammer" : 440,    			//( 60
 
 	//BOW
 	"weapon.wonky_bow" : 0,                   			//( 30,  50) | AP: 0.35 | AE: 0.50
@@ -618,12 +619,12 @@
 	"weapon.goblin_bow" : 42,                  			//( 25,  40) | AP: 0.35 | AE: 0.55
 	"weapon.short_bow" : 48,                   			//( 30,  50) | AP: 0.35 | AE: 0.50
 	"weapon.goblin_heavy_bow" : 54,            			//( 30,  50) | AP: 0.35 | AE: 0.60
-	"weapon.named_goblin_heavy_bow" : 151,     			//( 30,  50) | AP: 0.35 | AE: 0.60
+	"weapon.named_goblin_heavy_bow" : 401,     			//( 30
 	"weapon.composite_bow" : 54,               			//( 40,  55) | AP: 0.35 | AE: 0.70
 
 	"weapon.hunting_bow" : 60,                 			//( 40,  60) | AP: 0.35 | AE: 0.55
 	"weapon.war_bow" : 151,                    			//( 50,  70) | AP: 0.35 | AE: 0.60
-	"weapon.named_warbow" : 227,               			//( 50,  70) | AP: 0.35 | AE: 0.60
+	"weapon.named_warbow" : 502,               			//( 50
 	"weapon.masterwork_bow" : 227,             			//( 50,  75) | AP: 0.35 | AE: 0.65
 
 	//SLING
@@ -651,11 +652,11 @@
 	"weapon.crossbow" : 125,                    		//( 40,  60) | AP: 0.50 | AE: 0.70
 	"weapon.goblin_crossbow" : 0,            			//( 50,  70) | AP: 0.50 | AE: 0.75
 	"weapon.heavy_crossbow" : 150,             			//( 50,  70) | AP: 0.50 | AE: 0.75
-	"weapon.named_crossbow" : 225,             			//( 50,  70) | AP: 0.50 | AE: 0.75
+	"weapon.named_crossbow" : 500,             			//( 50
 
 	//FIREARM
 	"weapon.handgonne" : 225,                  			//( 35,  75) | AP: 0.25 | AE: 0.90
-	"weapon.named_handgonne" : 338,            			//( 35,  75) | AP: 0.25 | AE: 0.90
+	"weapon.named_handgonne" : 650,            			//( 35
 
 	//MUSICAL
 	"weapon.lute" : 0,                         			//(  5,  20) | AP: 0.40 | AE: 0.10
@@ -696,24 +697,24 @@
 	"shield.worn_kite_shield" : 66,            			//DEF: ( 15M,  20R) | DUR: -16.00 | STA: 40.00
 	"shield.faction_kite_shield" : 72,         			//DEF: ( 15M,  25R) | DUR: -16.00 | STA: 48.00
 	"shield.kite_shield" : 72,                 			//DEF: ( 15M,  25R) | DUR: -16.00 | STA: 48.00
-	"shield.named_bandit_kite_shield" : 700,    		//DEF: ( 15M,  25R) | DUR: -16.00 | STA: 60.00
-	"shield.named_undead_kite_shield" : 700,    		//DEF: ( 15M,  25R) | DUR: -13.00 | STA: 60.00
-	"shield.named_dragon" : 800,                		//DEF: ( 15M,  25R) | DUR: -16.00 | STA: 60.00
-	"shield.named_red_white" : 800,             		//DEF: ( 15M,  25R) | DUR: -16.00 | STA: 60.00
+	"shield.named_bandit_kite_shield" : 1133,    		//DEF: ( 15M
+	"shield.named_undead_kite_shield" : 1133,    		//DEF: ( 15M
+	"shield.named_dragon" : 1266,                		//DEF: ( 15M
+	"shield.named_red_white" : 1266,             		//DEF: ( 15M
 	"shield.named_lindwurm" : 0,             			//DEF: ( 17M,  25R) | DUR: -14.00 | STA: 64.00 unused
 
 	"shield.worn_heater_shield" : 66,          			//DEF: ( 20M,  15R) | DUR: -14.00 | STA: 24.00
 	"shield.faction_heater_shield" : 72,       			//DEF: ( 20M,  15R) | DUR: -14.00 | STA: 32.00
 	"shield.heater_shield" : 72,               			//DEF: ( 20M,  15R) | DUR: -14.00 | STA: 32.00
-	"shield.named_bandit_heater" : 600,         		//DEF: ( 20M,  15R) | DUR: -14.00 | STA: 40.00
-	"shield.named_undead_heater_shield" : 600,  		//DEF: ( 20M,  15R) | DUR: -11.00 | STA: 40.00
-	"shield.named_rider_on_horse" : 1000,       		//DEF: ( 20M,  15R) | DUR: -14.00 | STA: 40.00
-	"shield.named_wing" : 1000,                 		//DEF: ( 20M,  15R) | DUR: -14.00 | STA: 40.00
-	"shield.named_full_metal_heater" : 1500,    		//DEF: ( 20M,  15R) | DUR: -16.00 | STA: 75.00
+	"shield.named_bandit_heater" : 1000,         		//DEF: ( 20M
+	"shield.named_undead_heater_shield" : 1000,  		//DEF: ( 20M
+	"shield.named_rider_on_horse" : 1533,       		//DEF: ( 20M
+	"shield.named_wing" : 1533,                 		//DEF: ( 20M
+	"shield.named_full_metal_heater" : 2200,    		//DEF: ( 20M
 
 	"shield.metal_round_shield" : 120,          		//DEF: ( 18M,  18R) | DUR: -18.00 | STA: 60.00
-	"shield.named_golden_round" : 240,         			//DEF: ( 19M,  17R) | DUR: -18.00 | STA: 75.00
-	"shield.named_sipar_shield" : 240,         			//DEF: ( 18M,  18R) | DUR: -18.00 | STA: 75.00
+	"shield.named_golden_round" : 520,         			//DEF: ( 19M
+	"shield.named_sipar_shield" : 520,         			//DEF: ( 18M
 
 	"shield.tower_shield" : 96,                			//DEF: ( 20M,  20R) | DUR: -20.00 | STA: 24.00
 	"shield.legend_faction_tower_shield" : 96,			//DEF: ( 25M,  25R) | DUR: -30.00 | STA: 96.00
@@ -800,7 +801,8 @@
 	"legend_armor.body.anatomist_robe" : 196,                    				//DUR: 70.00 | STA: -7.00
 
 	"legend_armor.body.legend_tunic_noble" : 176,                        		//DUR: 40.00 | STA: -2.00
-	"legend_armor.named_tabard" : 176,                        					//DUR: 10.00 | STA:  0.00
+	"legend_armor.named_tabard" : 434,                        					//DUR: 10.00 | STA:  0.00
+
 	"legend_armor.body.legend_tunic_noble_named" : 264,                 		//DUR: 40.00 | STA: -2.00
 
 		//I
@@ -908,8 +910,10 @@
 	"legend_armor.body.legend_armor_plate_full_greaves_painted" : 535, 			//DUR: 170.00 | STA: -26.00
 	"legend_armor.body.legend_armor_plate_full_greaves_named" : 803,   			//DUR: 170.00 | STA: -26.00
 
-	"legend_armor.body.legend_southern_named_golden_plates" : 635,      		//DUR: 200.00 | STA: -36.00
-	"legend_armor.body.legend_southern_named_plates" : 1000,             		//DUR: 210.00 | STA: -25.00
+	"legend_armor.body.legend_southern_named_golden_plates" : 1046,      		//DUR: 200.00 | STA: -36.00
+
+	"legend_armor.body.legend_southern_named_plates" : 1533,             		//DUR: 210.00 | STA: -25.00
+
 
 	"legend_armor.body.ijirok_armor" : 12000,                            		//DUR: 320.00 | STA: -32.00
 	"legend_armor.body.armor_of_davkul" : 12000,                         		//DUR: 270.00 | STA: -18.00
@@ -918,7 +922,8 @@
 	//III
 	"legend_armor.body.legend_common_tabard" : 40,                             	//DUR: 10.00 | STA: 0.00
 	"legend_armor.body.legend_southern_tabard" : 40,                             //DUR: 10.00 | STA: 0.00
-	"legend_armor.named_tabard" : 264,                                  		//DUR: 10.00 | STA: 0.00
+	"legend_armor.named_tabard" : 552,                                  		//DUR: 10.00 | STA: 0.00
+
 
 	//VI //FEATURE_9: only the redback silk cloak looks good, possible use it again in future
 	"legend_armor.body.lindwurm_scales" : 0,                          			//DUR: 25.00 | STA: -2.00
@@ -1079,7 +1084,8 @@
 	"armor.head.legend_helmet_basinet" : 144,                           		//DUR: 80.00 | STA: -5.00
 	"armor.head.legend_helmet_flat_top_helm" : 144,                      		//DUR: 85.00 | STA: -5.00
 	"armor.head.legend_helmet_rondel_helm" : 144,                        		//DUR: 85.00 | STA: -6.00
-	"armor.head.legend_helmet_southern_named_conic" : 144,              		//DUR: 85.00 | STA: -3.00
+	"armor.head.legend_helmet_southern_named_conic" : 392,              		//DUR: 85.00 | STA: -3.00
+
 	"armor.head.legend_helmet_bascinet_named" : 216,                    		//DUR: 90.00 | STA: -4.00
 
 	"armor.head.legend_helmet_italo_norman_helm" : 180,                  		//DUR: 90.00 | STA: -6.00
